@@ -54,9 +54,6 @@
         ul li ul li {
             list-style-type: disc;
         }
-
-
-
     </style>
 </head>
 
@@ -100,6 +97,9 @@
         href="https://trac.cyberduck.io/ticket/10341">#10341</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Failure creating new vault (Cryptomator, OneDrive)</li>
+    <li><span class="label label-warning">Bugfix</span> Missing links in copy URL menu (CloudFront) (<a
+        href="https://trac.cyberduck.io/ticket/10402">#10402</a>)
+    </li>
 </ul>
 
 <p>
